Switch to .PATH: instead of VPATH.

--- a/freebsd/Makefile
+++ b/freebsd/Makefile
@@ -34,7 +34,7 @@ PREFIX?=/usr/local
 LIBDIR?= ${PREFIX}/lib
 
 .include <${.CURDIR}/../shlib_version>
-VPATH=${.CURDIR}/..
+.PATH: ${.CURDIR}/..
 SHLIB_MAJOR=${major}
 
 LIB= clog
