--- a/freebsd/Makefile
+++ b/freebsd/Makefile
@@ -58,6 +58,7 @@ MLINKS+=clog.3 CFATALX.3
 MLINKS+=clog.3 CNFATAL.3
 MLINKS+=clog.3 CFATAL.3
 
+CPPFLAGS += -DNEED_LIBCLENS
 CFLAGS+= -fdiagnostics-show-option -Wall -Werror
 CFLAGS+= -ggdb3 -I${.CURDIR} -I${INCDIR}
 LDADD+= -L ${LIBDIR} -lclens
