Modify freebsd makefile to include new clens subdirectory.

--- a/config/Makefile.freebsd
+++ b/config/Makefile.freebsd
@@ -7,4 +7,5 @@ MANDIR=$(LOCALBASE)/man/man
 
 CFLAGS+= -fdiagnostics-show-option
 CFLAGS+= -DNEED_LIBCLENS
+CFLAGS+= -I$(INCDIR)/clens
 LDADD+= -L ${LIBDIR} -lclens
