Rename debian packages to include soname major per debian guidelines.  This allows multiple versions of the shared library to coexist.  Also add in shlibs file to allow automatic package dependency resolution when creating packages that include this library.

--- a/config/debian/control
+++ b/config/debian/control
@@ -9,7 +9,7 @@ Homepage: http://opensource.conformal.com/wiki/clog
 Package: libclog-dev
 Section: libdevel
 Architecture: any
-Depends: libclog (= ${binary:Version})
+Depends: libclog2 (= ${binary:Version})
 Description: Library that provides various logging services - development
  This package contains the libraries, include files, and documentation
  to develop applications with clog.
@@ -18,7 +18,7 @@ Description: Library that provides various logging services - development
  verboseness. The user can define his/her own debug/verbosity flags to,
  at run-time, determine how verbose an application or daemon is.
 
-Package: libclog
+Package: libclog2
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
